--- a/概念笔记.md
+++ b/概念笔记.md
@@ -4,3 +4,40 @@
 
 **数据挖掘**采用适当的算法，从数据仓库的海量数据中提取具有潜在价值的信息和知识
 
+数据仓库通过数据专业从多个数据源提取数据，未来解决不同数据源格式上的不同意，需进行的数据操作是**转换**
+
+
+
+
+
+**事务的四大特性**：
+
+* 原子性
+
+* 一致性
+
+* 隔离性
+
+* 持久性
+
+  
+
+**join**：
+
+	* left join:         返回包括左表中所有记录和右表中联结字段相等的记录
+	* right join：                    右表                       左表         
+	* inner join： 只返回两个表中联结字段相等的行
+
+
+
+**日志文件**记录每个事务对数据库的修改操作
+
+
+
+**范式**
+
+		* 1NF：每个属性不可再分，是关系数据库的基础
+		* 2NF：去除**部分函数依赖**
+		* 3NF：去除**传递函数依赖**
+		* 4NF：去除**多值依赖**
+
