--- a/概念笔记.md
+++ b/概念笔记.md
@@ -47,3 +47,11 @@
 
 
 
+ER模型转换关系模式
+
+* 1:1  在两个实体任选一个添加另一个实体的主键即可
+* 1:N  在N端添加另一端的主键
+* M:N  将联系转化为实体，然后在该实体加上另外两个实体的主键，作为联系实体的主键，然后再加上该联系的自带的属性即可
+
+
+
