--- a/概念笔记.md
+++ b/概念笔记.md
@@ -55,3 +55,22 @@ ER模型转换关系模式
 
 
 
+**数据字典**是指对数据的数据项、数据结构、数据流、数据存储、处理逻辑、外部实体等进行定义和描述，其目的是对数据流程图中的各个元素做出详细的说明.数据字典一般由DBMS本身管理和维护。
+
+**聚集索引**的键值可以重复
+
+
+
+**索引适合使用的条件**：
+
+				1. 在经常需要搜索的列上，可以加快搜索速度；
+   				2. 在经常使用连接的列上（这些列主要是一些外键）可以加快连接速度
+   				3. 在经常需要根据范围进行搜索的列上创建索引，因为索引已经排序，其指定的范围是连续的；
+   				4. 在经常使用WHERE子句中的列上面创建索引，加快条件的判断速度
+
+
+
+将具有相同属性特征的同类对象抽象为实体集，然后归纳整理，用一个有意义的名词或名词短语为每一个**实体集**命名。
+
+**三级模式结构**提供了数据独立性，即当数据的逻辑结构和存储结构发生变化时，应用程序不受影响
+
