--- a/概念笔记.md
+++ b/概念笔记.md
@@ -74,3 +74,30 @@ ER模型转换关系模式
 
 **三级模式结构**提供了数据独立性，即当数据的逻辑结构和存储结构发生变化时，应用程序不受影响
 
+#### 介质故障
+
+> **软件容错**：使用数据库备份及事务日志文件，通过恢复技术，恢复数据库到备份结束时的状态
+
+> **硬件容错**：
+>
+> 1. 双物理存储设备（地理位置接近），如双硬盘镜像，使两个硬盘存储内容相同
+> 2. 设计两套相同的数据库系统，通过数据库软件机制，同步变化数据，两套系统在空间上有一定的距离。
+
+​					
+
+----
+
+#### 数据转储机制
+
+> 1. **完全转储**：对数据库所有数据进行转储。转储占用较多时间空间，恢复时间较短。可作为恢复数据库的基础
+> 2. **差量转储**：对最近一次完全转储以来发生的数据变化进行转储
+> 3. **增量转储**：只复制上次转储后发生变化的部分（文件或数据块），必须和完全转储配合使用
+
+
+
+![三种转储机制的区别 图标](https://pic4.zhimg.com/v2-7102c4f22e62d82f38c442c29cb1b427_b.jpg)
+
+----
+
+
+
