--- a/概念笔记.md
+++ b/概念笔记.md
@@ -95,7 +95,7 @@ ER模型转换关系模式
 
 
 
-![三种转储机制的区别 图标](https://pic4.zhimg.com/v2-7102c4f22e62d82f38c442c29cb1b427_b.jpg)
+![数据转储机制.png](https://i.loli.net/2021/09/23/LftoxZjN6sziAg3.png)
 
 ----
 
