--- a/概念笔记.md
+++ b/概念笔记.md
@@ -97,6 +97,8 @@ ER模型转换关系模式
 
 ![数据转储机制.png](https://i.loli.net/2021/09/23/LftoxZjN6sziAg3.png)
 
+<img src = "https://i.loli.net/2021/09/23/LftoxZjN6sziAg3.png" width = "150%">
+
 ----
 
 
