--- a/概念笔记.md
+++ b/概念笔记.md
@@ -64,9 +64,9 @@ ER模型转换关系模式
 **索引适合使用的条件**：
 
 				1. 在经常需要搜索的列上，可以加快搜索速度；
-   				2. 在经常使用连接的列上（这些列主要是一些外键）可以加快连接速度
-   				3. 在经常需要根据范围进行搜索的列上创建索引，因为索引已经排序，其指定的范围是连续的；
-   				4. 在经常使用WHERE子句中的列上面创建索引，加快条件的判断速度
+				2. 在经常使用连接的列上（这些列主要是一些外键）可以加快连接速度
+				3. 在经常需要根据范围进行搜索的列上创建索引，因为索引已经排序，其指定的范围是连续的；
+				4. 在经常使用WHERE子句中的列上面创建索引，加快条件的判断速度
 
 
 
@@ -95,9 +95,9 @@ ER模型转换关系模式
 
 
 
-![数据转储机制.png](https://i.loli.net/2021/09/23/LftoxZjN6sziAg3.png)
+![数据转储机制.png](http://www.niaoapi.com/static/ufile/compress/163244530799.png)
 
-<img src = "https://i.loli.net/2021/09/23/LftoxZjN6sziAg3.png" width = "150%">
+
 
 ----
 
