--- a/概念笔记.md
+++ b/概念笔记.md
@@ -93,13 +93,9 @@ ER模型转换关系模式
 > 2. **差量转储**：对最近一次完全转储以来发生的数据变化进行转储
 > 3. **增量转储**：只复制上次转储后发生变化的部分（文件或数据块），必须和完全转储配合使用
 
-
-
-
-
-
-
 ----
 
+#### 概括关系
 
+​	在UML类图中概括关系也称为**泛化关系**，描述了一般事物与该事务中的特殊种类之间的关系，即父类和子类之间的关系。如：售票员和电话售票员都属于业务人员的子类，属于概括关系
 
