--- a/概念笔记.md
+++ b/概念笔记.md
@@ -12,9 +12,9 @@
 
 **事务的四大特性**：
 
-* 原子性
+* 原子性：为了保持一致性，所有操作要么都做要么都不做
 
-* 一致性
+* 一致性：事务执行结果从一个一致性到另一个一致性的变化
 
 * 隔离性
 
@@ -99,5 +99,29 @@ ER模型转换关系模式
 
 **数据独立性**不仅简化了数据库应用程序的开发，同时因为屏蔽了物理结构的差异，所以也简化了用户维护数据的代价。
 
+----
 
+**DBAS总体设计：**
 
+* DBAS体系结构设计
+* 软硬件选型和配置设计
+* 应用软件总体设计
+* 业务规则初步设计
+
+----
+
+**元数据**被定义为描述数据及其环境的数据，是关于数据的数据，如：DBMS中的数据字典、数据库结构钢说明文档、前端应用程序表中数据项的定义及说明文档
+
+sql server 2008 只提供完全备份和差异备份
+
+----
+
+#### 分布式数据库
+
+最基本的特征：本地自治、非集中式管理、高可用性
+
+分片的三个原则：
+
+* 完整性原则：全局关系的所有数据项必须包含在某个片段中，否则将导致数据库不完整，造成某些片段的数据丢失
+* 重构性原则：所有片段必须能还原全局关系
+* 不相交原则：除了垂直分片的主键，任何数据必须且仅属于唯一的片段
