--- a/概念笔记.md
+++ b/概念笔记.md
@@ -125,3 +125,7 @@ sql server 2008 只提供完全备份和差异备份
 * 完整性原则：全局关系的所有数据项必须包含在某个片段中，否则将导致数据库不完整，造成某些片段的数据丢失
 * 重构性原则：所有片段必须能还原全局关系
 * 不相交原则：除了垂直分片的主键，任何数据必须且仅属于唯一的片段
+
+----
+
+联机事务处理OLTP要求系统必须有很高的响应速度，而联机分析处理OLAP对系统的响应速度要求较为宽松。
